--- a/localisation/dec1_national_ability_l_english.yml
+++ b/localisation/dec1_national_ability_l_english.yml
@@ -134,6 +134,10 @@
 
  dec1_czech_unity: "Czech Unity"
 
+ # Dual Monarchy
+
+ dec1_franco_british_union: "Franco-British Union"
+
  # Ducal Prussia
 
  dec1_the_rise_of_prussia: "The Rise of Prussia"
