--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -48,13 +48,15 @@
  NSE_ADJ: "Nordic"
  ROP: "Roman Republic"
  ROP_ADJ: "Roman"
+ ERP: "Eastern Roman Empire"
+ ERP_ADJ: "Roman"
  CIS: "Cisalpina"
  CIS_ADJ: "Cisalpinian"
  TRR: "Turkey"
  TRR_ADJ: "Turkish"
  CHN: "China"
  CHN_ADJ: "Chinese"
- PRC: "People's Republic of China"
+ PRC: "China"
  PRC_ADJ: "Chinese"
  EUR: "European Union"
  EUR_ADJ: "European"
